Update images and fix code

--- a/index.html
+++ b/index.html
@@ -74,7 +74,11 @@
             </div>
         </div>
 
-        <div id="game-board"></div>
+        <div id="game-board">
+            <div id="effect-overlay" class="hidden">
+                <img id="effect-img" src="" alt="特效">
+            </div>
+        </div>
 
     </div>
 
